# django-pg-ddl-extras

./: README.md  pyproject.toml
django_pg_ddl_extras/: __init__.py  constraints.py  pg_functions.py
tests/: test_main.py
